<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/popup_window"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom|center"
    android:background="@android:color/transparent"
    android:padding="10dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/round_fill_white">

        <com.indglobal.nizcare.commons.fonts.TextRegular
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="14sp"
            android:textColor="@color/fullGray"
            android:text="@string/menu"
            android:gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/lightGray"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:paddingLeft="15dp"
            android:gravity="center_vertical">
            
            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:src="@drawable/ic_calender"/>

            <com.indglobal.nizcare.commons.fonts.TextRegular
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="@color/lightBlack"
                android:text="@string/crtapoint"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="15dp" />
            
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/lightGray"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:paddingLeft="15dp"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:src="@drawable/ic_home_c"/>

            <com.indglobal.nizcare.commons.fonts.TextRegular
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="@color/lightBlack"
                android:text="@string/addptntvst"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="15dp" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/lightGray"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:paddingLeft="15dp"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:src="@drawable/ic_prescription"/>

            <com.indglobal.nizcare.commons.fonts.TextRegular
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="@color/lightBlack"
                android:text="@string/addprscptn"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="15dp" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/lightGray"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:paddingLeft="15dp"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:src="@drawable/ic_profile_pressed"/>

            <com.indglobal.nizcare.commons.fonts.TextRegular
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="@color/lightBlack"
                android:text="@string/addptnt"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="15dp" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/lightGray"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:paddingLeft="15dp"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:src="@drawable/ic_qna_pressed"/>

            <com.indglobal.nizcare.commons.fonts.TextRegular
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="@color/lightBlack"
                android:text="@string/addatip"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="15dp" />

        </LinearLayout>


    </LinearLayout>

    <com.indglobal.nizcare.commons.fonts.TextBold
        android:id="@+id/tvBtmShtCancle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/round_fill_white"
        android:textSize="15sp"
        android:textColor="@color/lightBlack"
        android:text="@string/cancel"
        android:gravity="center"
        android:layout_marginTop="10dp"/>

</LinearLayout>